--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=lib\\com.mysql.jdbc_5.1.5.jar
+file.reference.jxl.jar=lib\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.com.mysql.jdbc_5.1.5.jar}
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
+    ${file.reference.jxl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
