--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,13 @@ endorsed.classpath=
 excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=lib\\com.mysql.jdbc_5.1.5.jar
 file.reference.jxl.jar=lib\\jxl.jar
+file.reference.looks-1.2.2.jar=lib\\looks-1.2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${file.reference.looks-1.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
